--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -28,6 +28,19 @@ body {
       font-style:italic;
       font-weight:500;
   }
+  h2{
+        position:relative;
+        color:white;
+        font-size:10px;
+        font-weight:100;
+        margin-top:10px;
+        width:30px;
+        color:#ccc;
+        display:inline-block;
+        font-family:kanit;
+        font-style:italic;
+        font-weight:100;
+  }
 
   .title {
     color: white;
